# semantic-kernel-workshop

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml
01-intro-to-semantic-kernel/: 01-intro.ipynb  02-memory.ipynb
01-intro-to-semantic-kernel/bonus/frontend/src/: App.jsx
01-intro-to-semantic-kernel/bonus/frontend/src/pages/: SummarizeDemo.jsx
02-semantic-kernel-agents/: .env.sample  02.1-agents.ipynb  02.2-agents-chats.ipynb
03-process-framework/: 03.1-intro-to-processes.ipynb
playground/: README.md  requirements.txt  start.ps1  start.sh  start_async.ps1  start_sync.ps1
playground/backend/: main.py  pyproject.toml
playground/backend/app/: main.py
playground/backend/app/api/: agents.py  filters.py  functions.py  kernel.py  memory.py  process.py  weather.py
playground/backend/app/core/: kernel.py
playground/backend/app/filters/: content_filters.py
playground/backend/app/models/: api_models.py
playground/backend/app/plugins/: weather.py
playground/frontend/: README.md  next.config.ts  package-lock.json  package.json  run.sh  tailwind.config.js
playground/frontend/src/app/: globals.css  layout.tsx  page.tsx
playground/frontend/src/app/agent/: page.tsx
playground/frontend/src/app/filters/: page.tsx
playground/frontend/src/app/functions/: page.tsx
playground/frontend/src/app/memory/: page.tsx
playground/frontend/src/app/multi-agent/: page.tsx
playground/frontend/src/app/process/: page.tsx
playground/frontend/src/app/summarize/: page.tsx
playground/frontend/src/lib/: code-examples.ts
(+7 files in other folders)
